--- a/animations/package.json
+++ b/animations/package.json
@@ -6,7 +6,8 @@
     "@types/react-transition-group": "^4.4.5",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.13"
+    "react-scripts": "1.0.13",
+    "react-transition-group": "^4.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
